- 
    Bug 
- 
    Resolution: Done
- 
    P2: Important 
- 
    5.2.1, 5.3.0 Alpha
- 
    None
- 
        77024a62fefd641ad45371823c77530dcced2750
The eglfs plugin uses a default DPI of 100 while linuxfb uses a default DPI of 72. If the framebuffer does not indicate the physical size of the display, the text size shown on the display will change when switching between the eglfs and linuxfb plugins.
| For Gerrit Dashboard: QTBUG-37251 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V | 
| 80083,1 | Unify default dpi between eglfs and linuxfb | stable | qt/qtbase | Status: MERGED | +2 | 0 |