Unify default dpi between eglfs and linuxfb

Task-number: QTBUG-37251
Change-Id: I4ab8e645441f6ad3a122304e1ead050b48fafbac
Reviewed-by: Jørgen Lind <jorgen.lind@digia.com>